# chordizzle

./: .gitignore  LICENSE.txt  README.md  chordizzle.cabal  chords.txt  stack.yaml
app/: ImageViewer.hs  Main.hs
src/: ChordData.hs  ChordGraph.hs  Chords.hs  CircularZipper.hs  Color.hs  Main.hs  SVG.hs  Shape.hs  Theory.hs
