name:                chordizzle
version:             0.1.0.0
homepage:            https://github.com/TheBizzle/chordizzle#readme
license:             BSD3
license-file:        LICENSE.txt
author:              Jason Bertsche
maintainer:          jason.bertsche@gmail.com
copyright:           Jason Bertsche
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Chords
  default-extensions:  NoImplicitPrelude, OverloadedStrings
  build-depends:
    base                      >= 4.7     && < 5,
    bizzlelude                >= 1.0.0   && < 1.1.0,
    text                      >= 1.2.2.0 && < 1.3.0.0
  default-language:    Haskell2010
  other-modules:       Color, Shape, SVG, Theory

executable chordizzle
  hs-source-dirs:      app
  default-extensions:  MultiWayIf, NoImplicitPrelude, OverloadedStrings, TupleSections
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bizzlelude
                     , chordizzle
                     , directory   >= 1.3.0  && < 1.4.0
                     , file-embed  >= 0.0.10 && < 0.1.0,
                     , gtk         >= 0.14.0 && < 0.15.0
                     , text
  default-language:    Haskell2010
  other-modules:       ImageViewer

test-suite chordizzle-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , chordizzle
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/TheBizzle/chordizzle
