name:                chordizzle
version:             0.1.0.0
homepage:            https://github.com/TheBizzle/chordizzle#readme
license:             BSD3
license-file:        LICENSE.txt
author:              Jason Bertsche
maintainer:          jason.bertsche@gmail.com
copyright:           Jason Bertsche
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable chordizzle
  hs-source-dirs:      src
  default-extensions:  MultiWayIf, NoImplicitPrelude, OverloadedStrings, TupleSections
  main-is:             Main.hs
  build-depends:
    base              >= 4.9.0    && < 4.10.0,
    bizzlelude-js     >= 1.0.4    && < 1.1.0,
    comonad           >= 4.3.0    && < 5.0.0,
    containers        >= 0.5.7    && < 0.6.0,
    file-embed        >= 0.0.10   && < 0.1.0,
    ghcjs-dom         >= 0.2.4    && < 0.3.0,
    keycode           >= 0.2.2    && < 0.3.0,
    lens              >= 4.13.2   && < 4.14.0,
    reflex            >= 0.5.0    && < 0.6.0,
    reflex-dom        >= 0.4      && < 0.5,
    text              >= 1.2.2    && < 1.3.0,
    transformers      >= 0.5.0.0  && < 0.6.0.0
  default-language:    Haskell2010
  other-modules:       Chords, ChordData, CircularZipper, Color, Shape, Theory
  if impl(ghcjs)
    ghc-options:    -dedupe
  else
    ghc-options:    -threaded -rtsopts -with-rtsopts=-N -Wall

test-suite chordizzle-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , chordizzle
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/TheBizzle/chordizzle
